[gd_scene load_steps=13 format=2]

[ext_resource path="res://themes/common/font_PrintChar21.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/startup/scr_startup.gd" type="Script" id=2]
[ext_resource path="res://vfx/materials/mat_hud.tres" type="Material" id=4]
[ext_resource path="res://vfx/materials/mat_overlay.tres" type="Material" id=5]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxLine" id=3]
color = Color( 0.454902, 0.529412, 0.513726, 1 )

[sub_resource type="StyleBoxLine" id=4]
color = Color( 0.317647, 0.407843, 0.337255, 1 )

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="DynamicFont" id=2]
size = 7
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=7]
default_font = SubResource( 2 )
Button/colors/font_color = Color( 0.780392, 0.780392, 0.780392, 1 )
Button/colors/font_color_disabled = Color( 0.172549, 0.2, 0.223529, 1 )
Button/colors/font_color_focus = Color( 0.780392, 0.780392, 0.780392, 1 )
Button/colors/font_color_hover = Color( 0.454902, 0.529412, 0.513726, 1 )
Button/colors/font_color_pressed = Color( 0.317647, 0.407843, 0.337255, 1 )
Button/styles/disabled = SubResource( 1 )
Button/styles/focus = SubResource( 1 )
Button/styles/hover = SubResource( 1 )
Button/styles/normal = SubResource( 1 )
Button/styles/pressed = SubResource( 1 )
CheckBox/constants/check_vadjust = 4
CheckBox/constants/hseparation = -4
CheckBox/icons/checked = null
CheckBox/icons/unchecked = null
HSeparator/styles/separator = SubResource( 5 )
HSlider/icons/grabber = null
HSlider/icons/grabber_highlight = null
HSlider/styles/grabber_area = SubResource( 3 )
HSlider/styles/grabber_area_highlight = SubResource( 3 )
HSlider/styles/slider = SubResource( 4 )
Label/colors/font_color = Color( 0.780392, 0.780392, 0.780392, 1 )
VSeparator/styles/separator = SubResource( 6 )

[sub_resource type="CubeMesh" id=8]
size = Vector3( 1, 1, 1 )

[node name="startup" type="Control" groups=["menu"]]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 7 )
script = ExtResource( 2 )
canvas_materials = [ ExtResource( 4 ), ExtResource( 5 ) ]

[node name="BG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="CompShader" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="spatialWorld" type="Spatial" parent="CompShader"]

[node name="cam" type="Camera" parent="CompShader/spatialWorld"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2 )

[node name="mesh" type="MeshInstance" parent="CompShader/spatialWorld"]
mesh = SubResource( 8 )

[node name="canvasWorld" type="Control" parent="CompShader"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="tex" type="TextureRect" parent="CompShader/canvasWorld"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
expand = true

[node name="BG2" type="ColorRect" parent="CompShader"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="txtInfo" type="Label" parent="CompShader"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -8.0
margin_right = 139.0
grow_vertical = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "compiling shaders..."
valign = 2

[node name="txtProgress" type="Label" parent="CompShader"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -139.0
margin_top = -8.0
grow_horizontal = 0
grow_vertical = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "0/0"
align = 2
valign = 2
